# inf2218

./: README.md  addbin.jff  addbin.txt  addbingen.py  find.jff  incbin.jff  sumbin.jff
tmlang/: .gitignore  CMakeLists.txt  Makefile  README.md  lex.yy.c  tm.l  tm.tab.c  tm.txt  tm.y
tmlang/examples/: 01.tm  02.tm  03.tm  04.tm  05.tm  06.tm  07.tm  08.tm  09.tm  10.tm  11.tm  12.tm  13.tm  14.tm  15.tm  find-replace.jff  find-replace.lua  incbin.jff  incbin.lua  incbin.repr  incbin.tm  utm.jff  utm.lua
tmlang/src/: CMakeLists.txt  tm.l  tm.y  tm.y.c  tm.y.h
tmlang/src/ast/: CMakeLists.txt  tm_ast.h  tm_ast_bind.c  tm_ast_destroy.c  tm_ast_destroy.h  tm_ast_jff.c  tm_ast_print.c  tm_ast_repr.c  tm_vm.c  tm_vm.h
tmlang/src/jff/: CMakeLists.txt  tm_jff.c
tmlang/src/ldb/: CMakeLists.txt  tm_ldb.c
tmlang/src/repr/: CMakeLists.txt  tm_repr.c
tmlang/src/utils/: CMakeLists.txt  tm_utils.c  tm_utils.h
tmlang/src/ydb/: CMakeLists.txt  tm_ydb.c
turing-machine/: Makefile  find_replace  find_replace.c  find_replace.py  increment.py  sum.py  tm.py
